--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -51,3 +51,17 @@ i {
 .dice-utf8 {
   font-size: 32px;
 }
+
+.flex {
+  display: flex;
+  justify-content: center;
+}
+.flex div {
+  padding: 0 0.25em;
+  margin: 0 0.25em;
+  text-align: center;
+}
+
+.center {
+  text-align: center;
+}
