--- a/htdocs/css/style.scss
+++ b/htdocs/css/style.scss
@@ -47,3 +47,15 @@ i {
 .center {
     text-align: center;
 }
+
+table.left-border {
+    border-left: 2px solid grey;
+}
+
+table {
+    padding: 1em;
+
+    * {
+        padding: 0.25em 0.5em;
+    }
+}
